--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,28 +1,22 @@
 /* You can add global styles to this file, and also import other style files */
-
 @import '@angular/material/prebuilt-themes/indigo-pink.css';
 
-html, body { 
-    height: 100%; 
+html, body {
+  height: 100%;
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+  background-color: #f5f5f5;
 }
 
-body { 
-    margin: 0; 
-    font-family: Roboto, "Helvetica Neue", sans-serif; 
+.error-snackbar {
+  background-color: #f44336;
+  color: white;
 }
 
-.container {
-    padding: 20px;
+mat-card {
+  margin-bottom: 20px;
 }
 
-.mat-card {
-    margin: 10px;
-}
-
-.mat-card-actions {
-    padding: 16px;
-}
-
-button {
-    margin-right: 8px;
+.mat-mdc-form-field {
+  width: 100%;
 }
